# fp-test

./: LICENSE  README.md  fp-homework.hsfiles  stack.yaml
.github/classroom/: autograding.json
hw0/: .ghc.environment.x86_64-linux-8.6.5  hw0.cabal
hw0/src/: .hlint.yaml
hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
hw1/: hw1.cabal
hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
hw2/: .ghc.environment.x86_64-linux-8.6.5  hw2.cabal
hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
hw3/: hw3.cabal
hw4/: hw4.cabal
practice1/: practice1.cabal
practice1/app/: Main.hs
practice2/: practice2.cabal
practice2/app/: Main.hs
