name:                practice1
version:             0.1.0.0
synopsis:            Template for task 1
description:         Practice 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/practice1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

executable practice1
  hs-source-dirs:      app
  main-is:     Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
